fixed list items layout issue

--- a/styles/work-section.css
+++ b/styles/work-section.css
@@ -52,17 +52,12 @@
 }
 
 .box-content .tags li {
-  overflow:auto;
-  width: 20%;
   padding: 8px 12px;
   border-radius: 4px;
   background-color: var(--bg-white-1);
 }
 
-.tags li {
-  float:left;
-  width: auto;
-}
+
 .btn {
   margin-top: 1.8125rem;
   margin-bottom: 1.5rem;
